--- a/dj/accounts/templates/accounts/login_form.html
+++ b/dj/accounts/templates/accounts/login_form.html
@@ -7,11 +7,12 @@
 
 <div class="logged-in logged-in-stuff">
  Hi <span id=user_name>user</span>
- <form id='logout'><input type="submit" value='Logout'></form>
+ <form id='logout'>{% csrf_token %}<input type="submit" value='Logout'></form>
 </div>
 
 <div class=logged-out>
 <form id='login'>
+  {% csrf_token %}
     <div id='error_text'></div>
     <div class=login_form>
       <ul>
